# fetch

./: .gitignore  Cargo.toml  README.md  ddg.html  google.html  log4rs.yaml
.github/workflows/: rust.yml
src/: main.rs
src/searchengine/: bing.rs  brave.rs  customengine.rs  duckduckgo.rs  google.rs  mod.rs
static/: index.html  newindex.html  result.html  search.css  search.css.map  style.css
