[package]
name = "fetch"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.9"
futures = "0.3"
reqwest = { version = "0.11.0" }
rayon = "1.5"
scraper = "0.12.0"
tokio = { version = "1", features = ["full"] }
tinytemplate = "1.2.1"
html-escape = "0.2.11"
log = "0.4.16"
log4rs = "1.0.0"
quickcheck = "1"
quickcheck_async = "0.1.1"

[features]
savefile = []